RESOLVED FIXED215210
Scrolling tree nodes sometimes don't match layer z-order
https://bugs.webkit.org/show_bug.cgi?id=215210
Summary Scrolling tree nodes sometimes don't match layer z-order
Simon Fraser (smfr)
Reported 2020-08-05 21:28:23 PDT
Scrolling tree nodes sometimes don't match layer z-order
Attachments
Patch (7.15 KB, patch)
2020-08-05 21:34 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-08-05 21:34:11 PDT
Radar WebKit Bug Importer
Comment 2 2020-08-05 21:34:42 PDT
EWS
Comment 3 2020-08-06 07:56:01 PDT
Committed r265327: <https://trac.webkit.org/changeset/265327> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406072 [details].
Note You need to log in before you can comment on or make changes to this bug.